<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_help"
        android:orderInCategory="101"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/action_help"
        android:showAsAction="always|collapseActionView" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings" />
    
    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/action_search"
        android:showAsAction="always|collapseActionView"
        android:actionViewClass="android.widget.SearchView" />

</menu>
