<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SettingsActivity" >

    <Spinner
        android:id="@+id/campus_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/campus_icon"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/campus_icon"
        android:layout_toRightOf="@+id/campus_icon"
        android:entries="@array/campus_spinner" />

    <ImageView
        android:id="@+id/campus_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/select_campus_label"
        android:layout_below="@+id/select_campus_label"
        android:src="@drawable/school" />

    <ImageView
        android:id="@+id/schedule_icon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/campus_icon"
        android:layout_below="@+id/select_semester_label"
        android:src="@drawable/schedule" />

    <Spinner
        android:id="@+id/semester_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/schedule_icon"
        android:layout_alignTop="@+id/schedule_icon"
        android:layout_toRightOf="@+id/schedule_icon"
        android:entries="@array/semester_spinner" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:text="@string/save_settings" />

    <TextView
        android:id="@+id/select_campus_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/save_settings"
        android:layout_alignParentTop="true"
        android:layout_marginTop="16dp"
        android:text="@string/select_campus_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/select_semester_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/schedule_icon"
        android:layout_below="@+id/campus_spinner"
        android:layout_marginTop="68dp"
        android:text="@string/select_semester_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>